# zero

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: launch-post.md
docs/github-workflow-template/: README.md  ci.yml
results/: RESULTS.md
results/baselines/capset-6-random/: events.jsonl  summary.json
results/baselines/matmul44_z2-random/: events.jsonl  summary.json
results/baselines/sortnet8-random/: events.jsonl  summary.json
results/baselines/sortnet8-smoke/: events.jsonl  summary.json
results/llm/capset-6/: events.jsonl
results/llm/matmul44_z2/: events.jsonl  summary.json
results/llm/sortnet8/: events.jsonl  summary.json
results/single_shot/: single_shot.json
results/single_shot/capset-6/: program.py  prompt.txt  response.txt  summary.json
results/single_shot/matmul44_z2/: program.py  prompt.txt  response.txt  summary.json
results/single_shot/sortnet8/: program.py  prompt.txt  response.txt  summary.json
scripts/: aggregate_results.py  decompress_results.sh  reproduce.sh  run_all_baselines.sh  run_all_benchmarks.sh  run_single_shot_llm.py
src/zero/: __init__.py  cli.py  config.py  db.py  events.py  evolution.py  llm.py  mutation.py  sandbox.py
src/zero/problems/: __init__.py  base.py  capset.py  matmul44_z2.py  sortnet8.py
tests/: test_db.py  test_evolution.py  test_problems.py  test_sandbox.py
