[project]
name = "zero"
version = "0.1.0"
description = "Open-source AlphaEvolve-style evolutionary algorithm discovery engine"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5.0"]

[project.scripts]
zero = "zero.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "results",
    ".zero_cache",
    "runs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
